--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^7.0.12",
     "axios": "^1.5.0",
     "primereact": "^9.6.2",
     "react": "^18.2.0",
